# ActVibModules

./: .gitignore  ActVibSystem.py  Adaptive.py  AdaptiveOO.py  CantileverBeam.py  DSPFuncs.py  Examples.ipynb  Examples_ActiveControl.py  Examples_ActiveControlOO.py  Filters.py  SignalGen.py  Utils.py  pyproject.toml  requirements.txt
SampleSignals/: ControlModeSample.feather  Measurements1.parquet  aaa.feather
