[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ActVibModules"
version = "1.0"
dependencies = [
    "numpy",
    "pandas",
    "pyarrow",
    "scipy"
]

# Manter todos os módulos do pacote na raiz do projeto constitui uma topologia não padrão.
# Para alcançar o comportamento esperado (import ActVibModules.<modulo>) é necessário:
#   --> Importar os arquivos na raiz do projeto
#   --> Alterar a raiz da build para emular a estrutura "ActVibModules/<modulo>.py"

[tool.hatch.build.targets.wheel]
include = [
   "*.py" # Importa todos os arquivos .py na raiz do projeto
]

[tool.hatch.build.targets.wheel.sources]
"" = "ActVibModules" # Altera a raiz da build
